--- a/1.ipynb
+++ b/1.ipynb
@@ -16,6 +16,15 @@
    "source": [
     "print(\"hello world\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"수정된 부분입니다\")"
+   ]
   }
  ],
  "metadata": {
