--- a/03-1.ipynb
+++ b/03-1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,9 +18,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/hl/v8wjcd3d7sb1xbjy562xy3400000gn/T/ipykernel_26520/1220105315.py:21: PerformanceWarning: indexing past lexsort depth may impact performance.\n",
+      "  ns_book3.update(loan_count)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 384591 entries, 0 to 384590\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column   Non-Null Count   Dtype \n",
+      "---  ------   --------------   ----- \n",
+      " 0   번호       384591 non-null  int64 \n",
+      " 1   도서명      384188 non-null  object\n",
+      " 2   저자       384393 non-null  object\n",
+      " 3   출판사      379950 non-null  object\n",
+      " 4   발행년도     384577 non-null  object\n",
+      " 5   ISBN     384591 non-null  object\n",
+      " 6   세트 ISBN  56576 non-null   object\n",
+      " 7   부가기호     310386 non-null  object\n",
+      " 8   권        63378 non-null   object\n",
+      " 9   주제분류번호   364727 non-null  object\n",
+      " 10  도서권수     384591 non-null  int64 \n",
+      " 11  대출건수     384591 non-null  int64 \n",
+      " 12  등록일자     384591 non-null  object\n",
+      "dtypes: int64(3), object(10)\n",
+      "memory usage: 38.1+ MB\n"
+     ]
+    }
+   ],
    "source": [
     "def data_cleaning(filename):\n",
     "    #파일을 데이터 프레임으로 읽어옴\n",
@@ -50,15 +85,19 @@
     "    #원본 데이터프레임의 열 순서로 변경\n",
     "    ns_book4 = ns_book4[ns_book.columns]\n",
     "    return ns_book4\n",
-    "\n"
+    "\n",
+    "ns_book4 = data_cleaning('도서관 자료.csv')\n",
+    "ns_book4.info()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ns_book4.to_csv('ns_book4.csv')"
+   ]
   }
  ],
  "metadata": {
